# Plex-Pinger

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  services.toml
src/: checker.rs  config.rs  main.rs  notifier.rs
